fix: position value wrapped with quotes

--- a/apps/site/src/components/Sticker/BaseSticker.module.scss
+++ b/apps/site/src/components/Sticker/BaseSticker.module.scss
@@ -4,7 +4,7 @@
 }
 
 .stickerParent {
-	position: "relative";
+	position: relative;
 	width: 0;
 	height: 0;
 }
